# duplicate_finder

./: CMakeLists.txt  duplicate_finder.pro  main.cpp  main_widget.cpp  main_widget.h  main_widget.ui  process.cpp  process.h  process.ui  synchronized_scanner.cpp  synchronized_scanner.h
